--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       content="Test, explore, and customize cursor themes with our interactive tool. Perfect for developers and designers."
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="google-adsense-account" content="ca-pub-3118617231035128">
 
     <title>Interactive Cursor Test</title>
     <link
