--- a/index.html
+++ b/index.html
@@ -181,8 +181,29 @@
 
             <div class="col-md-6">
               <label class="form-label d-block">Preview Canvas:</label>
+              <div class="mb-2">
+                <div class="btn-group" role="group">
+                  <input type="radio" class="btn-check" name="drawMode" id="drawModeNone" value="none" checked>
+                  <label class="btn btn-outline-secondary btn-sm" for="drawModeNone">Hover</label>
+
+                  <input type="radio" class="btn-check" name="drawMode" id="drawModeRect" value="rectangle">
+                  <label class="btn btn-outline-primary btn-sm" for="drawModeRect">Rectangle</label>
+
+                  <input type="radio" class="btn-check" name="drawMode" id="drawModeCircle" value="circle">
+                  <label class="btn btn-outline-primary btn-sm" for="drawModeCircle">Circle</label>
+
+                  <input type="radio" class="btn-check" name="drawMode" id="drawModeLine" value="line">
+                  <label class="btn btn-outline-primary btn-sm" for="drawModeLine">Line</label>
+                </div>
+              </div>
               <div class="border rounded p-2" style="overflow: auto; max-height: 600px;">
                 <canvas id="previewCanvas" style="display: block; max-width: 100%;"></canvas>
+              </div>
+              <div class="mt-2">
+                <label class="form-label">Generated JSON:</label>
+                <textarea class="form-control font-monospace" id="generatedJson" rows="4" readonly></textarea>
+                <button type="button" class="btn btn-success btn-sm mt-1" onclick="copyGeneratedJson()">Copy JSON</button>
+                <button type="button" class="btn btn-primary btn-sm mt-1" onclick="addGeneratedToEditor()">Add to Editor</button>
               </div>
             </div>
           </div>
