Add custom cursors to preview gallery

--- a/index.html
+++ b/index.html
@@ -213,25 +213,24 @@
     <div id="content" class="d-flex justify-content-center flex-wrap"></div>
 
     <footer class="text-center py-4 bg-light mt-auto">
-      <p class="mb-1">Follow me on:</p>
-      <a href="https://github.com/VibhorJaiswal" target="_blank" class="mx-2">
-        <img
-          src="https://img.icons8.com/ios-glyphs/30/000000/github.png"
-          alt="GitHub"
-        />
-      </a>
-      <a
-        href="https://www.linkedin.com/in/vibhor-jaiswal-a031231b0/"
-        target="_blank"
-        class="mx-2"
-      >
-        <img
-          src="https://img.icons8.com/ios-filled/30/0077b5/linkedin.png"
-          alt="LinkedIn"
-        />
-      </a>
-
-      <p class="mt-3 mb-0">&copy; 2024 Vibhor Jaiswal. All rights reserved.</p>
+      <p class="mb-2">
+        <small>Licensed under <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html" target="_blank" rel="noopener">GPL v2</a></small>
+      </p>
+      <p class="mb-1">
+        <a href="https://github.com/KjellMorgenstern" target="_blank" rel="noopener" class="mx-2">
+          <img
+            src="https://img.icons8.com/ios-glyphs/30/000000/github.png"
+            alt="GitHub"
+          />
+          View on GitHub
+        </a>
+      </p>
+      <p class="mt-3 mb-1">
+        <small>&copy; 2025 Custom cursor and interactive preview area: Kjell Morgenstern</small>
+      </p>
+      <p class="mb-0">
+        <small>&copy; 2024 First version: <a href="https://vibhorjaiswal.github.io/Cursor-Test/" target="_blank" rel="noopener">Vibhor Jaiswal</a></small>
+      </p>
     </footer>
 
     <script src="./script.js"></script>
